[project]
name = "webloginbrute"
version = "0.27.1"
description = "Web登录暴力破解工具"
authors = [{name = "RedteamNotes"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "pyyaml>=5.4.0",
    "pydantic>=1.8.0",
]

[project.scripts]
webloginbrute = "webloginbrute.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"] 